--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <a href="https://www.freecodecamp.org/fcc1e50b99d-9969-4055-996e-e5250c9041ba">FreeCodeCamp</a><br>
       <a href="https://www.codewars.com/users/Eng.Mariam">CodeWars</a><br>
     <a href="https://github.com/Mariam421">GitHub</a><br>
-  
+      <a href="https://github.com/Mariam421/Mariam421.github.io">GitHub repo</a>
   
   </footer>
     </body>
